fix: Text overflow in item list and library info

--- a/src/style/list-control.scss
+++ b/src/style/list-control.scss
@@ -25,6 +25,7 @@
     overflow: hidden;
     width: 100%;
     padding-left: 75px;
+    padding-right: 10px;
   }
 
   &_label {
